[gd_scene load_steps=5 format=2]

[ext_resource path="res://Environment/Bottle.png" type="Texture" id=1]
[ext_resource path="res://Environment/Bottle.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 2.38557
height = 5.91379

[sub_resource type="CapsuleShape2D" id=2]
radius = 3.00319
height = 5.8042

[node name="Bottle" type="RigidBody2D"]
position = Vector2( 182.099, 77.8133 )
collision_layer = 8
linear_velocity = Vector2( 50, -50 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="HitArea" type="Area2D" parent="."]
collision_mask = 262145

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitArea"]
shape = SubResource( 2 )

[node name="DestructTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
[connection signal="area_entered" from="HitArea" to="." method="_on_HitArea_area_entered"]
[connection signal="area_exited" from="HitArea" to="." method="_on_HitArea_area_exited"]
[connection signal="body_entered" from="HitArea" to="." method="_on_HitArea_body_entered"]
[connection signal="timeout" from="DestructTimer" to="." method="_on_DestructTimer_timeout"]
